# tickterial

./: .gitignore  LICENSE  Makefile  README.md  launch.py  pyproject.toml  requirements.txt  setup.py  start.py  test.py  tests.py
tickterial/: __init__.py  downloader.py  main.py  models.py  routes.py  ticker.py  tickloader.py
tickterial/templates/: index.html
