# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tickterial"
version = "1.1.0"
description = "Download tick data from Dukascopy Bank SA to local cache with custom simulated price streams!"
readme = "README.md"
authors = [{ name = "drui9", email = "ngaira14nelson@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["forex", "forex-data", "streaming", "forex "]
dependencies = [
	'loguru==0.6.0',
	'pytz==2022.7',
	'requests==2.32.0'
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["build", "twine"]

[project.urls]
Homepage = "https://github.com/drui9/tickterial"

[project.scripts]
tickterial = "tickterial.main:main"