# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tickterial"
version = "1.1.2"
description = "Download tick data from Dukascopy Bank SA to local cache, and simulate multi-symbol time-ordered price streams to stdout."
readme = "README.md"
authors = [{ name = "drui9", email = "drui9@duck.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["tick-data", "forex-data", "tick-api", "ticks"]
dependencies = [
	'loguru==0.7.2',
	'pytz==2022.7',
	'requests==2.32.2',
    'alive-progress>=3.1.5'
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "build",
    "twine"
]

[project.urls]
Homepage = "https://github.com/drui9/tickterial"

[project.scripts]
tickterial = "tickterial.main:main"
